--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,7 +12,7 @@
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
-    "baseUrl": "./wics-website-vue",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
     }
