--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-pattern *.gitignore",
+    "lint": "eslint . --fix",
     "format": "prettier --write src",
     "check": "prettier --check src"
   },
