Added deployment script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
     "format": "prettier --write src",
-    "check": "prettier --check src"
+    "check": "prettier --check src",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.4.29",
