Update year in footer

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
